# sormant

./: .gitignore  CMakeLists.txt  README.md
bpf/: CMakeLists.txt  xdp.c
cmake/: detect.cmake  options.cmake  settings.cmake
src/: CMakeLists.txt  main.c
